@@ -809,8 +809,9 @@ namespace System.Web {
 						error = new HttpException ("", error);
 						response.StatusCode = 500;
 					}
-					if (!RedirectCustomError ())
-						FinalErrorWrite (response, ((HttpException) error).GetHtmlErrorMessage ());
+					HttpException httpEx = (HttpException) error;
+					if (!RedirectCustomError (ref httpEx))
+						FinalErrorWrite (response, httpEx.GetHtmlErrorMessage ());
 					else
 						response.Flush (true);
 				} else {
@@ -1248,9 +1249,10 @@ namespace System.Web {
 			return true;
 		}
 							
-		bool RedirectCustomError ()
+		bool RedirectCustomError (ref HttpException httpEx)
 		{
-			if (!context.IsCustomErrorEnabled)
+			try {
+			if (!context.IsCustomErrorEnabledUnsafe)
 				return false;
 			
 #if NET_2_0
@@ -1285,6 +1287,11 @@ namespace System.Web {
 				return false;
 			
 			return RedirectErrorPage (redirect);
+			}
+			catch (Exception ex) {
+				httpEx = new HttpException (500, "", ex);
+				return false;
+			}
 		}
 #endregion
 	}
