@@ -1,3 +1,10 @@
+2007-05-03 Igor Zelmanovich <igorz@mainsoft.com>
+
+	* HttpApplication.cs:
+	* HttpContext.cs:
+	handling exceptions occurred if  <system.web/customError> 
+	section is not valid.	
+
 2007-05-08  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* BaseParamsCollection.cs: fixed Get(string) property, fixed collection
